Remove overflow from nav bar to prevent scroll bar issues

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -3,7 +3,7 @@
 body {
   background-image: url(../../assets/about.jpg);
   background-size: cover;
-  min-height: 90vh;
+  height: 90vh;
   margin-top: -10px;
 }
 
